# homebrew-macplus

./: .gitignore  CLAUDE.md  LICENSE  README.md  biome.json  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
Casks/: macplus.rb
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: main-window.json
src-tauri/icons/: icon.icns
src-tauri/resources/: macplus-askpass
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: apps.rs  execute.rs  mod.rs  self_update.rs  settings.rs  system.rs  uninstall.rs  updates.rs
src-tauri/src/db/: app_repo.rs  history_repo.rs  migrations.rs  mod.rs  update_repo.rs
src-tauri/src/detection/: bundle_reader.rs  deduplicator.rs  directory_scan.rs  homebrew.rs  homebrew_formula.rs  mas.rs  mod.rs  pkg_receipts.rs  spotlight.rs  system_profiler.rs
src-tauri/src/executor/: delegated_executor.rs  homebrew_executor.rs  homebrew_formula_executor.rs  mas_executor.rs  microsoft_autoupdate_executor.rs  mod.rs  sparkle_executor.rs
src-tauri/src/models/: app.rs  events.rs  mod.rs  settings.rs  uninstall.rs  update.rs
src-tauri/src/platform/: icon_extractor.rs  mod.rs  permissions.rs  tray_badge.rs
src-tauri/src/scheduler/: fs_watcher.rs  mod.rs  scan_scheduler.rs
src-tauri/src/updaters/: adobe_cc.rs  cask_sha_checker.rs  electron.rs  github_releases.rs  homebrew_api.rs  homebrew_cask.rs  homebrew_formula.rs  jetbrains_toolbox.rs  keystone.rs  mac_app_store.rs  macadmins_feed.rs  microsoft_autoupdate.rs  mod.rs  mozilla.rs  sparkle.rs  version_compare.rs
(+81 files in other folders)
